dep-3-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-replicas
  labels:
    app: my-k8s-application
    env: prod
    owner: KorobtsovV
spec:
  replicas: 2
  selector:
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
        - name: cia-web
          image: korobtsovv/k8sphp:version-1
          ports:
            - containerPort: 80
