dep-4-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app: my-k8s-application
    env: prod
    owner: KorobtsovV
spec:
  replicas: 2
  selector:
    matchLabels:
      project: mossad
  template:
    metadata:
      labels:
        project: mossad
    spec:
      containers:
        - name: mossad-web
          image: korobtsovv/k8sphp:latest
          ports:
            - containerPort: 80
