pod-myweb-ver1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env: prod
    app: main
    tier: frontend
    owner: Volodymyr-Korobtsov
spec:
  containers:
    - name: container-nginx
      image: nginx:latest
      ports:
        - containerPort: 80
