dep-5-svc1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-web-deployment
  labels:
    app: my-k8s-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb
    spec:
      containers:
        - name: kgb-web
          image: korobtsovv/k8sphp:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env: prod
    owner: KorobtsovV
spec:
  selector:
    project: kgb
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
