myresume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myresume-deployment
  labels:
    app: myresume-web
    env: prod
    owner: Volodymyr-Korobtsov
spec:
  selector:
    matchLabels:
      project: myresume
  template:
    metadata:
      labels:
        project: myresume
    spec:
      containers:
        - name: myresume-docker
          image: korobtsovv/myresume:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myresume-service
  labels:
    env: prod
    owner: Volodymyr-Korobtsov
spec:
  selector:
    project: myresume
  ports:
    - name: myresume-listener
      protocol: TCP
      port: 8888
      targetPort: 80
  type: NodePort
