ingress-hosts.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
            serviceName: main
            servicePort: 80
    - host: localhost
      http:
        paths:
          - backend:
            serviceName: web1
            servicePort: 80
    - host: localhost
      http:
        paths:
          - backend:
            serviceName: nginx
            servicePort: 80
